Hallelujah finally solved issue of modal appearing behind backdrop. Added payment icons in cart, and added social media icons in landing page.

--- a/ecomm-store/src/Modals.css
+++ b/ecomm-store/src/Modals.css
@@ -54,3 +54,7 @@
     color: ivory;
 background-color: #fffff026;
 }
+
+#selectAndAdd .MuiButton-label {
+    color: #252525 !important;
+}
