--- a/ecomm-store/src/Nav.css
+++ b/ecomm-store/src/Nav.css
@@ -23,6 +23,7 @@ nav {
 
   #navBtns {
     display: flex;
+    align-items: center;
   }
 
   .MuiButton-label {
