--- a/ecomm-store/src/routes/Products.css
+++ b/ecomm-store/src/routes/Products.css
@@ -52,7 +52,7 @@
     justify-content: center;
     align-content: center;
     margin: 0 auto;
-    backdrop-filter: blur(5px);
+    /* backdrop-filter: blur(5px); */
 }
 
 #btn-policy {
